# California-Universities-ETL

./: Dockerfile  README.md  main.py  my_db.db  pyproject.toml  requirements.txt
