[tool.poetry]
name = "pythonetl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"
mypy = "^1.3.0"
requests = "^2.31.0"
pandas = "^2.0.2"
sqlalchemy = "^2.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
